# portfolio-Jaewoo-Kim

./: README.md
Communication/: I2C_blocking_master.c.c  I2C_blocking_slave.c.c  README.md  can.c.c  spi_slave.c.c  uart.c.c  wifi.c.c
Digital_fllter/: README.md
Digital_fllter/Digitalfilter/Core/Inc/: APF.h  BPF.h  BSF.h  HPF.h  LPF.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h
Digital_fllter/Digitalfilter/Core/Src/: apf.c  bsf.c  hpf.c  lpf.c  main.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c
Digital_fllter/Simulation_source/APF/: apf_mat.m  apf_simulink.slx
Digital_fllter/Simulation_source/BPF/: bpf.c  bpf_mat.m  bpf_simulink.slx
Digital_fllter/Simulation_source/BSF/: bsf_mat.m  bsf_simulink.slx
Digital_fllter/Simulation_source/HPF/: hpf_mat.m  hpf_simulink.slx
Digital_fllter/Simulation_source/LPF/: lpf.slx
Elevator/: README.md
Elevator/ver1/: .cproject  .mxproject  .project  Elevator Debug.launch  Elevator.ioc
Elevator/ver1/Core/Inc/: keypad.h  stm32h5xx_it.h
Elevator/ver1/Core/Src/: keypad.c  main.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c
Elevator/ver1/Debug/: Elevator.elf  Elevator.list  Elevator.map  makefile  objects.list
Elevator/ver1/Debug/Core/Src/: keypad.cyclo  keypad.d  keypad.su  main.cyclo  main.d  main.su  stm32h5xx_hal_msp.cyclo  stm32h5xx_hal_msp.d  stm32h5xx_hal_msp.su  stm32h5xx_it.d  subdir.mk
Elevator/ver1/Debug/Drivers/STM32H5xx_HAL_Driver/Src/: subdir.mk
Elevator/ver2/: elevator.c
MCU_Puzzle_project/: README.md
MCU_Puzzle_project/fp2/: settings.gradle.kts
MCU_Puzzle_project/fp2/app/: build.gradle.kts
MCU_Puzzle_project/fp2/app/src/main/: AndroidManifest.xml
MCU_Puzzle_project/fp2/app/src/main/cpp/: CMakeLists.txt  JNIDriver.c  OpenCLDriver.c  native-lib.cpp
MCU_Puzzle_project/fp2/app/src/main/java/com/example/fp2/: CameraPreview.java  JNIDriver.java  JNIListener.java  MainActivity.java  PuzzleActivity.java  ResultActivity.java
MCU_Puzzle_project/fp2/app/src/main/res/layout/: activity_main.xml  activity_sec.xml  activity_thr.xml
MCU_Puzzle_project/fp2/app/src/main/res/values/: strings.xml  themes.xml
MCU_Puzzle_project/fp2/app/src/main/res/values-night/: themes.xml
MCU_Puzzle_project/fp2/gradle/: libs.versions.toml
MCU_Puzzle_project/fp2/gradle/wrapper/: gradle-wrapper.properties
STM32_DCDCConverter/: README.md
STM32_DCDCConverter/bleControl/: .cproject  blepro Debug.launch
STM32_DCDCConverter/bleControl/Core/Src/: main.c
STM32_DCDCConverter/bleControl/Debug/: blepro.elf  blepro.map
STM32_DCDCConverter/bleControl/Debug/Core/Src/: stm32f1xx_hal_msp.cyclo  stm32f1xx_hal_msp.su
STM32_DCDCConverter/blepro/: bleControl.ioc
STM32_DCDCConverter/blepro/Debug/: blepro.list  makefile
STM32_DCDCConverter/blepro/Debug/Core/Src/: main.cyclo  main.su
STM32_DCDCConverter/converter_firmware/: .project
STM32_DCDCConverter/converter_firmware/Core/Src/: main.c  stm32f1xx_hal_msp.c
arduino_cleaning_robot/: README.md  cleaning_robot.c  cleaning_robot.ino
cleaning_robot/: README.md
verilog_traffic/: README.md
verilog_traffic/trafficSim/: LCD.v  clock.v  clockHz.v  daynight.v  hour.v  hourbt.v  lcdstate.v  minute.v  oneshot.v  second.v  statework.v  traffic.v
